@@ -44,6 +44,9 @@ Note that the following bug and feature requests are logged in GForge with relat
  **removed trim() statements in query building to handle intended spaces in file names.  Note that there may be a bug for collection names with
  embedded spaces, this is ignored in the JUNit tests for CollectionAOImpl, and that issue has been routed to iRODS for now.
  
+ *[#1211] Re: [iROD-Chat:9536] jargon mangling UTF-8 characters
+ **completed wiring codebase into jargon.properties settings
+ 
 ==Features==
 
 *[#1264] [iROD-Chat:9666] Referencing Data Objects
